--- a/locationrealtime/pubspec.yaml
+++ b/locationrealtime/pubspec.yaml
@@ -36,6 +36,10 @@ dependencies:
   firebase_core: ^3.15.1
   firebase_auth: ^5.6.2
   firebase_database: ^11.3.1
+  google_maps_flutter: ^2.10.0
+  geolocator: ^13.0.1
+  geocoding: ^3.0.0
+  web_socket_channel: ^2.4.0
 
 dev_dependencies:
   flutter_test:
