--- a/locationrealtime/pubspec.yaml
+++ b/locationrealtime/pubspec.yaml
@@ -36,6 +36,10 @@ dependencies:
   firebase_core: ^3.15.1
   firebase_auth: ^5.6.2
   firebase_database: ^11.3.1
+  firebase_messaging: ^15.1.3
+  google_maps_flutter: ^2.5.0
+  geolocator: ^10.1.0
+  intl: ^0.18.1
 
 dev_dependencies:
   flutter_test:
