--- a/locationrealtime/web/manifest.json
+++ b/locationrealtime/web/manifest.json
@@ -1,11 +1,11 @@
 {
-    "name": "locationrealtime",
-    "short_name": "locationrealtime",
+    "name": "Lyn",
+    "short_name": "Lyn",
     "start_url": ".",
     "display": "standalone",
     "background_color": "#0175C2",
     "theme_color": "#0175C2",
-    "description": "A new Flutter project.",
+    "description": "Real-time location tracking app.",
     "orientation": "portrait-primary",
     "prefer_related_applications": false,
     "icons": [
