--- a/locationrealtime/pubspec.yaml
+++ b/locationrealtime/pubspec.yaml
@@ -34,5 +34,9 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^5.0.0
+  mockito: ^5.4.6
+  fake_async: ^1.3.1
+  build_runner: ^2.4.13
+  firebase_auth_mocks: ^0.14.2
 flutter:
   uses-material-design: true
