--- a/locationrealtime/pubspec.yaml
+++ b/locationrealtime/pubspec.yaml
@@ -21,6 +21,8 @@ dependencies:
   random_avatar: ^0.0.8
   shared_preferences: ^2.2.2
   path_provider: ^2.1.2
+  flutter_webrtc: ^0.12.4
+  permission_handler: ^11.3.1
 
 icons_launcher:
   image_path: 'assets/icon.png'
