cập nhật vị trí offline

--- a/locationrealtime/ios/Runner/Info.plist
+++ b/locationrealtime/ios/Runner/Info.plist
@@ -45,5 +45,17 @@
 	<true/>
 	<key>UIApplicationSupportsIndirectInputEvents</key>
 	<true/>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>Ứng dụng cần quyền truy cập vị trí để chia sẻ vị trí với bạn bè.</string>
+	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
+	<string>Ứng dụng cần quyền truy cập vị trí liên tục để cập nhật vị trí ngay cả khi ứng dụng đang chạy nền.</string>
+	<key>NSLocationAlwaysUsageDescription</key>
+	<string>Ứng dụng cần quyền truy cập vị trí liên tục để theo dõi vị trí khi ứng dụng không mở.</string>
+	<key>UIBackgroundModes</key>
+	<array>
+		<string>location</string>
+		<string>background-fetch</string>
+		<string>background-processing</string>
+	</array>
 </dict>
 </plist>
