--- a/locationrealtime/pubspec.yaml
+++ b/locationrealtime/pubspec.yaml
@@ -19,6 +19,7 @@ dependencies:
   image_picker: ^1.0.7
   cached_network_image: ^3.3.1
   random_avatar: ^0.0.8
+  flutter_svg: ^2.0.9
   shared_preferences: ^2.2.2
   path_provider: ^2.1.2
   flutter_webrtc: ^0.12.4
