--- a/locationrealtime/pubspec.yaml
+++ b/locationrealtime/pubspec.yaml
@@ -13,8 +13,10 @@ dependencies:
   firebase_core: ^3.6.0
   firebase_auth: ^5.3.3
   firebase_database: ^11.0.8
+  cloud_firestore: ^5.4.4
   google_maps_flutter: ^2.10.0
   geolocator: ^13.0.1
+  geocoding: ^2.2.0
   intl: ^0.18.1
   image_picker: ^1.0.7
   cached_network_image: ^3.3.1
@@ -24,6 +26,7 @@ dependencies:
   path_provider: ^2.1.2
   flutter_webrtc: ^0.12.4
   permission_handler: ^11.3.1
+  provider: ^6.0.5
 
 icons_launcher:
   image_path: 'assets/icon.png'
